--- a/WebContent/aboutme/photo.html
+++ b/WebContent/aboutme/photo.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/publ/src/css/index.css">
     <link rel="stylesheet" href="/publ/src/css/style.css">
+    <link rel="stylesheet" href="/publ/src/css/aboutme.css">	
     <title>자기소개 page</title>
 </head>
 <body>
@@ -21,20 +21,7 @@
 	
 	<!-- section -->
 	<section>
-		<h1>웹 서버 사이드(java) 개발자 ~! 전연빈</h1>
-		<div id="simple-my-info">
-			<h5>
-				함께 개발하고 같이 성장하고 싶어요<br>
-				경기도 하남시 덕풍1동 어딘가 살고 있어요!
-			</h5>
-		</div>
-		<ul id="section-ul">
-			<li><a href="/aboutme/photo.html">내사진</a></li>
-			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
-		</ul>
-		<div id="my-location">
-			<img alt="my_home" src="/publ/src/img/my_home.png" width="600" height="600">
-		</div>	
+		<h1>섹션</h1>
 	</section>
 
 	<!-- footer -->
