--- a/WebContent/aboutme/photo.html
+++ b/WebContent/aboutme/photo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/publ/src/css/style.css">
-    <link rel="stylesheet" href="/publ/src/css/aboutme.css">	
+    <link rel="stylesheet" href="/publ/src/css/photo.css">	
     <title>자기소개 page</title>
 </head>
 <body>
@@ -21,7 +21,30 @@
 	
 	<!-- section -->
 	<section>
-		<h1>섹션</h1>
+		<div id="sally">
+			<img class="my-pic" alt="sally" src="/publ/src/img/line_sally.png">
+			<span class="pic-info">
+				1994.02.25<br>
+				샐리 (오리)<br>
+				태어 났을 때, 샐리처럼 조그만한 시절이 있었습니다.<br>
+			</span>
+		</div>
+		<div id="brown">
+			<img class="my-pic" alt="brown" src="/publ/src/img/line_brown.jpg">
+			<span class="pic-info">
+				2012.03<br>
+				브라운 (곰돌이)<br>
+				곰돌이처럼 세상에 무서움을 모르고 덤빌때가 있었죠.<br>
+			</span>
+		</div>
+		<div id="cony">
+			<img class="my-pic" alt="cony" src="/publ/src/img/line_cony.png">
+			<span class="pic-info">
+				2019 (현재)<br>
+				코니 (토끼)<br>
+				세상에 무서움을 알게된 토끼로 변했습니다.<br>
+			</span>
+		</div> 
 	</section>
 
 	<!-- footer -->
