--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,24 +4,31 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>메인화면 페이지</title>
+		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
-		<nav style="text-align:right;">
+		<nav>
 			<button class="button_nav">홈</button>
 			<button class="button_nav">자기소개</button>
 			<button class="button_nav">내사진</button>
 			<button class="button_nav">몇시에요</button>
 		</nav>
+		<hr noshade/>
 		
 		<div style="text-align:center;">
 			<h1>웹 프론트엔드 개발자~! 배진우</h1>
-			 함께 개발하고 같이성장하고 싶어요<br/>
-			 경기도 성남시 분당구 어딘가 살고 있어요!<br/>
-			 <button class="button_square">자기소개</button>
-			 <button class="button_square">내사진</button><br/>
-			 <img src="/img/home_map.jpg"/>
-		 </div>
-		 
+			<p>
+				함께 개발하고 같이성장하고 싶어요<br/>
+				경기도 성남시 분당구 어딘가 살고 있어요!<br/>
+			</p>
+			<p>
+				<button class="button_square">자기소개</button>
+				<button class="button_square">내사진</button>
+			</p>
+			<img src="./img/home_map.jpg"/>
+		</div>
+		<hr noshade/>
+		
 		<footer>
 			<span>Copyright @배진우</span>
 		</footer>
