--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,10 +8,10 @@
 	</head>
 	<body>
 		<nav>
-			<button class="button_nav">홈</button>
-			<button class="button_nav">자기소개</button>
-			<button class="button_nav">내사진</button>
-			<button class="button_nav">몇시에요</button>
+			<button class="button_nav" onclick="location.href='index.html'">홈</button>
+			<button class="button_nav" onclick="location.href='aboutme.html'">자기소개</button>
+			<button class="button_nav" onclick="location.href='photo.html'">내사진</button>
+			<button class="button_nav" onclick="location.href='time.html'">몇시에요</button>
 		</nav>
 		<hr noshade/>
 		
@@ -22,8 +22,8 @@
 				경기도 성남시 분당구 어딘가 살고 있어요!<br/>
 			</p>
 			<p>
-				<button class="button_square">자기소개</button>
-				<button class="button_square">내사진</button>
+				<button class="button_square" onclick="location.href='aboutme.html'">자기소개</button>
+				<button class="button_square" onclick="location.href='photo.html'">내사진</button>
 			</p>
 			<img src="./img/home_map.jpg"/>
 		</div>
