--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -12,24 +12,24 @@
 					<a href="/index.html"><li class="menu-item square-box">홈</li></a>
 					<a href="/aboutme.html"><li class="menu-item square-box">자기소개</li></a>
 					<a href="/photo.html"><li class="menu-item square-box">내사진</li></a>
-					<a href="/today"><li class="menu-item square-box">몇시에요</li></a>
+					<a href="/aboutme/today"><li class="menu-item square-box">몇시에요</li></a>
 				</ul>
 			</nav>
 		</header>
 		<section>
-			<ul class="introduce">
-				<li class="introduce-item">
+			<ul class="content-list">
+				<li class="content">
 					<span class="title">이런것을 잘해요</span>
 					<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</span>
 				</li>
-				<li class="introduce-item">
-					<span class="title">나의 포트폴리오</span>
+				<li class="content">
+					<span class="title">내가 쓰는 웹사이트</span>
 					<span><a href="http://www.naver.com">http://www.naver.com</a></span>
 					<span>네이버에요</span>
 					<span><a href="http://www.github.com">http://www.github.com</a></span>
 					<span>깃헙이에요</span>
 				</li>
-				<li class="introduce-item">
+				<li class="content">
 					<span class="title">나의 최근 프로젝트 설명</span>
 					<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</span>
 				</li>
