--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,12 +8,14 @@
 	<body>
 		<header>
 			<nav>
+				<nav>
 				<ul class="menu">
 					<a href="/index.html"><li class="menu-item square-box">홈</li></a>
 					<a href="/aboutme.html"><li class="menu-item square-box">자기소개</li></a>
 					<a href="/photo.html"><li class="menu-item square-box">내사진</li></a>
-					<a href="/today"><li class="menu-item square-box">몇시에요</li></a>
+					<a href="/aboutme/today"><li class="menu-item square-box">몇시에요</li></a>
 				</ul>
+			</nav>
 			</nav>
 		</header>
 		<section>
