--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -2,20 +2,45 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Insert title here</title>
+		<title>자기소개</title>
 	</head>
+	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
 	<body>
 		<header>
 			<nav>
-				<ul>
-					<li class="menu-item"></li>
-					<li class="menu-item"></li>
-					<li class="menu-item"></li>
-					<li class="menu-item"></li>
+				<ul class="menu">
+					<a href="/index.html"><li class="menu-item square-box">홈</li></a>
+					<a href="/aboutme.html"><li class="menu-item square-box">자기소개</li></a>
+					<a href="/photo.html"><li class="menu-item square-box">내사진</li></a>
+					<a href="/aboutme/today"><li class="menu-item square-box">몇시에요</li></a>
 				</ul>
 			</nav>
 		</header>
-		<section></section>
-		<footer></footer>
+		<section id="photo-section">
+			<ul class="content-list">
+				<li class="content">
+					<img class="photo" src="./img/yesterday.jpg" align="left"/>
+					<div class="photo-caption">
+						<span>2019년 1월 14일</span>
+						<span>활기차게</span>
+						<span>시작</span>
+					</div>
+				</li>
+				<li class="content">
+					<img class="photo" src="./img/today.JPG" align="left"/>
+					<div class="photo-caption">
+						<span>2019년 1월 15일</span>
+						<span>도대체</span>
+						<span>뭐가 문제냐</span>
+					</div>
+				</li>
+			</ul>
+		</section>
+		<footer>
+			<div id="web">
+				<span>life4lord93@nts-corp.com</span>
+				<span>https://gitlab.com/n_tech_service/2019_1st_intern</span>
+			</div>
+		</footer>
 	</body>
 </html>
