--- a/WebContent/aboutme/aboutme.html
+++ b/WebContent/aboutme/aboutme.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/publ/src/css/style.css">
-    <link rel="stylesheet" href="/publ/src/css/aboutme.css">	
-    <title>자기소개 page</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="/publ/src/css/style.css">
+<link rel="stylesheet" href="/publ/src/css/aboutme.css">
+<title>자기소개 page</title>
 </head>
 <body>
-	
+
 	<!-- header -->
 	<header>
 		<ul id="header-ul">
-			<li><a href="/aboutme/today">몇시에요</a></li>
-			<li><a href="/aboutme/photo.html">내사진</a></li>
-			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
 			<li><a href="/aboutme/index.html">홈</a></li>
+			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
+			<li><a href="/aboutme/photo.html">내사진</a></li>
+			<li><a href="/aboutme/today">몇시에요</a></li>
 		</ul>
 	</header>
-	
+
 	<!-- section -->
 	<section>
 		<div id="do-best">
 			<h1>이런걸 잘해요?</h1>
 			<h5>
 				주로 웹어플리케이션 백엔드를 담당하여 java기반 spring framework를 이용하여 개발을 진행하였습니다.<br>
-				빅데이터 및 블록체인등에 관심이 많아 spark를 기반으로 한 장바구니 추천 시스템 개발, hyperledger를 이용한 중고거래 플랫폼등
-				신기술에도 관심이 있지만 현재는 대규모 트래픽 처리 및 코드 최적화에 관심이 많고 잘하고 싶습니다.
+				빅데이터 및 블록체인등에 관심이 많아 spark를 기반으로 한 장바구니 추천 시스템 개발, hyperledger를 이용한
+				중고거래 플랫폼등 신기술에도 관심이 있지만 현재는 대규모 트래픽 처리 및 코드 최적화에 관심이 많고 잘하고 싶습니다.
 			</h5>
 		</div>
-		
+
 		<div id="portpolio">
 			<h1>나의 포트폴리오</h1>
 			<h5>
 				<a href="https://m.skmagic.com.my">https://m.skmagic.com.my</a><br>
-				웅진에서 개발한 모바일 웹 어플리케이션 입니다<br><br>
-				
+				웅진 인턴시절에 개발한 모바일 웹 어플리케이션 입니다<br>
 				<a href="https://github.com/jeonyeonbin">https://github.com/jeonyeonbin</a><br>
 				제가 주로 개발하는 소스 저장소 입니다. 주로 Node 관련 된 프로젝트가 많습니다.
 			</h5>
 		</div>
-		
+
 		<div id="my-project">
 			<h1>나의 최근 프로젝트 설명</h1>
 			<h5>
-				Node Spring 두 개의 프레임워크를 이용하여 웹 어플리케이션 제작한 경험이 있으며 <br>
+				Node Spring 두 개의 프레임워크를 이용하여 웹 어플리케이션 제작한 경험이 있으며 <br> 
 				최근 프로젝트로 웅진에서 SK Magic 모바일 웹 어플리케이션을 제작하였습니다.<br>
 				또한 Naver Hack Day에서는 Node를 이용하여 컨텐츠 기반 백엔드 시스템 개발 및 간단한 리스트 경험이 있습니다<br>
 				최근 한이음 공모전에 출전해 Hyperledger(BlockChain) 기반 중고 거래 플랫폼 개발 한 경험이 있습니다.<br>
@@ -56,6 +55,6 @@
 	<footer>
 		<div id="email">jyb5858@nts-corp.com</div>
 		<div id="blog-url">https://github.com/jeonyeonbin</div>
-	</footer>	
+	</footer>
 </body>
 </html>
