--- a/WebContent/aboutme/index.html
+++ b/WebContent/aboutme/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/publ/src/css/index.css">
-    <link rel="stylesheet" href="/publ/src/css/style.css">
-    <title>자기소개 page</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="/publ/src/css/index.css">
+<link rel="stylesheet" href="/publ/src/css/style.css">
+<title>자기소개 page</title>
 </head>
 <body>
-	
+
 	<!-- header -->
 	<header>
 		<ul id="header-ul">
-			<li><a href="/aboutme/today">몇시에요</a></li>
-			<li><a href="/aboutme/photo.html">내사진</a></li>
-			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
 			<li><a href="/aboutme/index.html">홈</a></li>
+			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
+			<li><a href="/aboutme/photo.html">내사진</a></li>
+			<li><a href="/aboutme/today">몇시에요</a></li>
 		</ul>
 	</header>
-	
+
 	<!-- section -->
 	<section>
 		<h1>웹 서버 사이드(java) 개발자 ~! 전연빈</h1>
 		<div id="simple-my-info">
 			<h5>
-				함께 개발하고 같이 성장하고 싶어요<br>
+				함께 개발하고 같이 성장하고 싶어요<br> 
 				경기도 하남시 덕풍1동 어딘가 살고 있어요!
 			</h5>
 		</div>
 		<ul id="section-ul">
-			<li><a href="/aboutme/photo.html">내사진</a></li>
 			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
+			<li><a href="/aboutme/photo.html">내사진</a></li>
 		</ul>
 		<div id="my-location">
-			<img alt="my_home" src="/publ/src/img/my_home.png" width="600" height="600">
-		</div>	
+			<img alt="my_home" src="/publ/src/img/my_home.png" width="900"
+				height="600">
+		</div>
 	</section>
 
 	<!-- footer -->
 	<footer>
 		<div id="email">jyb5858@nts-corp.com</div>
 		<div id="blog-url">https://github.com/jeonyeonbin</div>
-	</footer>	
+	</footer>
 </body>
 </html>
