CSS+Convention matching

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,47 +1,74 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="EUC-KR">
-<title>INDEX ÆäÀÌÁö ÀÔ´Ï´Ù</title>
-
-<!-- External Style Sheet -->
-<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="css/base.css">
-<link rel="stylesheet" type="text/css" href="css/index.css">
-
-<!-- Internal style sheet -->
-<style type="text/css">
-
-</style>
-
-</head>
-
-<body>
-	<header class='sections' id='navbar'>
-		<ul id="navMenu">
-			<li class="button navButton"><a href="/aboutme/index.html">È¨</a></li>
-			<li class="button navButton"><a href="/aboutme/aboutme.html">ÀÚ±â¼Ò°³</a></li>
-			<li class="button navButton"><a href="/aboutme/photo.html">³»»çÁø</a></li>
-			<li class="button navButton"><a href="/aboutme/today">¸î½Ã¿¡¿ä</a></li>
-		</ul>
-	</header>
-	<section class='sections'>
-		<h1>À¥ ÇÁ·ÐÆ®¿£µå °³¹ßÀÚ~! ÀÌÀç¿ø</h1>
-		<p>
-			ÇÔ²² °³¹ßÇÏ°í °°ÀÌ ¼ºÀåÇÏ°í ½Í¾î¿ä <br> °æ±âµµ ¿ëÀÎ½Ã ¼öÁö±¸ ¾îµò°¡ »ì°í ÀÖ¾î¿ä
-		</p>
-
-		<ul id="navMenu">
-			<li class="button contentButton"><a href="">È¨</a></li>
-			<li class="button contentButton"><a href="">ÀÚ±â¼Ò°³</a></li>
-		</ul>
-
-		<img src="./images/map.JPG"></img>
-	</section>
-	<footer class='sections'>
-		<p id='footerParagraph'>
-			lee.jaewon@nts-corp.com<br> https://github.com/wodnjs6512
-		</p>
-	</footer>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>INDEX íŽ˜ì´ì§€ ìž…ë‹ˆë‹¤</title>
+		
+		<!-- External Style Sheet and font ë‚˜ëˆ”ê³ ë”• -->
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800"
+			>
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/index.css">
+	
+	</head>
+	
+	<body>
+	
+		<header class='sections' id='navbar'>
+		
+			<ul id="navMenu">
+			
+				<li class="button navButton">
+					<a href="/aboutme/index.html">í™ˆ</a>
+				</li>
+				<li class="button navButton">
+					<a href="/aboutme/aboutme.html">ìžê¸°ì†Œê°œ</a>
+				</li>
+				<li class="button navButton">
+					<a href="/aboutme/photo.html">ë‚´ì‚¬ì§„</a>
+				</li>
+				<li class="button navButton">
+					<a href="/aboutme/today">ëª‡ì‹œì—ìš”</a>
+				</li>
+				
+			</ul>
+			
+		</header>
+		
+		<section class='sections'>
+		
+			<p class="indexContentParagraph">
+				<strong>ì›¹ í”„ë¡ íŠ¸ì—”ë“œ ê°œë°œìž~! ì´ìž¬ì›</strong><br>
+				í•¨ê»˜ ê°œë°œí•˜ê³  ê°™ì´ ì„±ìž¥í•˜ê³  ì‹¶ì–´ìš” <br> 
+				ê²½ê¸°ë„ ìš©ì¸ì‹œ ìˆ˜ì§€êµ¬ ì–´ë”˜ê°€ ì‚´ê³  ìžˆì–´ìš”
+			</p>
+	
+			<ul id="navMenu">
+			
+				<li class = "button contentButton">
+					<a href="/aboutme/index.html">í™ˆ</a>
+				</li>
+				<li class = "button contentButton">
+					<a href="/aboutme/aboutme.html">ìžê¸°ì†Œê°œ</a>
+				</li>
+				
+			</ul>
+	
+			<img src="./img/map.JPG" alt="map"></img>
+			
+		</section>
+		
+		<footer class = 'sections'>
+		
+			<p id='footerParagraph'>
+				lee.jaewon@nts-corp.com<br>
+				https://github.com/wodnjs6512
+			</p>
+			
+		</footer>
+			
+	</body>
+	
 </html>
