--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -1,82 +1,99 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="EUC-KR">
-<title>ABOUT ME ÆäÀÌÁö ÀÔ´Ï´Ù</title>
-
-<!-- External Style Sheet -->
-<link
-	href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800"
-	rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="css/base.css">
-<link rel="stylesheet" type="text/css" href="css/base.css">
-<link rel="stylesheet" type="text/css" href="css/aboutme.css">
-
-<!-- Internal style sheet -->
-<style type="text/css">
-</style>
-
-</head>
-
-<body>
-	<header class='sections' id='navbar'>
-		<ul id="navMenu">
-			<li class="button navButton"><a href="/aboutme/index.html">È¨</a></li>
-			<li class="button navButton"><a href="/aboutme/aboutme.html">ÀÚ±â¼Ò°³</a></li>
-			<li class="button navButton"><a href="/aboutme/photo.html">³»»çÁø</a></li>
-			<li class="button navButton"><a href="/aboutme/today">¸î½Ã¿¡¿ä</a></li>
-		</ul>
-	</header>
-	<section class='sections aboutMeSection'>
-		<article class='aboutMeArticle'>
-			<p>
-				<strong>ÀÌ·± °ÍÀ» ÀßÇØ¿ä?</strong><br> Lorem ipsum dolor sit amet,
-				consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-				labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-				exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-				esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-				cupidatat non proident, sunt in culpa qui officia deserunt mollit
-				anim id est laborum.
+	<head>
+		<meta charset="utf-8">
+		<title>ABOUT ME í˜ì´ì§€ ì…ë‹ˆë‹¤</title>
+		
+		<!-- External Style Sheet and font ë‚˜ëˆ”ê³ ë”• -->
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800"
+			>
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/aboutme.css">
+		
+	</head>
+	
+	<body>
+	
+		<header class='sections' id='navbar'>
+		
+			<ul id="navMenu">
+			
+				<li class="button navButton">
+					<a href="/aboutme/index.html">í™ˆ</a>
+				</li>
+				<li class="button navButton">
+					<a href="/aboutme/aboutme.html">ìê¸°ì†Œê°œ</a>
+				</li>
+				<li class="button navButton">
+					<a href="/aboutme/photo.html">ë‚´ì‚¬ì§„</a>
+				</li>
+				<li class="button navButton">
+					<a href="/aboutme/today">ëª‡ì‹œì—ìš”</a>
+				</li>
+				
+			</ul>
+			
+		</header>
+		
+		<section class='sections aboutMeSection'>
+		
+			<article class='aboutMeArticle'>
+			
+				<p>
+					<strong>ì´ëŸ° ê²ƒì„ ì˜í•´ìš”?</strong><br> Lorem ipsum dolor sit amet,
+					consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+					exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+					esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+					cupidatat non proident, sunt in culpa qui officia deserunt mollit
+					anim id est laborum.
+				</p>
+	
+			</article>
+			
+			<article class='aboutMeArticle'>
+			
+				<p>
+					<strong>ë‚˜ì˜ í¬íŠ¸í´ë¦¬ì˜¤</strong><br>
+					<a href='http://www.my.com'>www.my.com</a><br> 
+					ì œ í™ˆí˜ì´ì§€ ì…ë‹ˆë‹¤. ì´ê³³ì—ì„œ ë§ì€ ê°œë°œì½”ë“œë¥¼ ë³¼ ìˆ˜ ìˆìŠµë‹ˆë‹¤. <br>
+					<a href='http://www.github.com/crong'>github.com/crong</a><br>
+					ì œê°€ ì£¼ë¡œ ê°œë°œí•˜ëŠ” ì†ŒìŠ¤ì½”ë“œ ì…ë‹ˆë‹¤. ì´ê³³ì—ì„œ ë§ì€ ë¶€ë¶„ì„ í™•ì¸í•  ìˆ˜ ìˆìŠµë‹ˆë‹¤.
+				</p>
+	
+			</article>
+			
+			<article class='aboutMeArticle'>
+			
+				<p>
+					<strong>ë‚˜ì˜ ìµœê·¼ í”„ë¡œì íŠ¸ ì„¤ëª…</strong><br>
+					ìµœê·¼ ë§Œë“  í”„ë¡œì íŠ¸ëŠ” xxxì…ë‹ˆë‹¤. um.jsë¼ëŠ”
+					ìë°”ìŠ¤í¬ë¦½íŠ¸ ë¼ì´ë¸ŒëŸ¬ë¦¬ë¥¼ í™œìš©í•œ ë¹„ë™ê¸° í”„ë¡œê·¸ë˜ë°ì„ êµ¬í˜„í–ˆìŠµë‹ˆë‹¤. ---Lorem ipsum dolor sit amet,
+					consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+					exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+					esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+					cupidatat non proident, sunt in culpa qui officia deserunt mollit
+					anim id est laborum.
+				</p>
+	
+			</article>
+	
+		</section>
+		
+		<footer class='sections'>
+		
+			<p id='footerParagraph'>
+				lee.jaewon@nts-corp.com<br>
+				https://github.com/wodnjs6512
 			</p>
-
-
-
-		</article>
-		<article class='aboutMeArticle'>
-			<p>
-				<strong>³ªÀÇ Æ÷Æ®Æú¸®¿À</strong><br> <a href='http://www.my.com'>www.my.com</a>
-				<br> Á¦ È¨ÆäÀÌÁö ÀÔ´Ï´Ù. ÀÌ°÷¿¡¼­ ¸¹Àº °³¹ßÄÚµå¸¦ º¼ ¼ö ÀÖ½À´Ï´Ù. <br>
-				 <a href='http://www.github.com/crong'>github.com/crong</a> <br>
-				Á¦°¡ ÁÖ·Î °³¹ßÇÏ´Â ¼Ò½ºÄÚµå ÀÔ´Ï´Ù. ÀÌ°÷¿¡¼­ ¸¹Àº ºÎºĞÀ» È®ÀÎÇÒ ¼ö ÀÖ½À´Ï´Ù.
-			</p>
-
-
-		</article>
-		<article class='aboutMeArticle'>
-			<p>
-				<strong>³ªÀÇ ÃÖ±Ù ÇÁ·ÎÁ§Æ® ¼³¸í</strong><br> ÃÖ±Ù ¸¸µç ÇÁ·ÎÁ§Æ®´Â xxxÀÔ´Ï´Ù. um.js¶ó´Â
-				ÀÚ¹Ù½ºÅ©¸³Æ® ¶óÀÌºê·¯¸®¸¦ È°¿ëÇÑ ºñµ¿±â ÇÁ·Î±×·¡¹ÖÀ» ±¸ÇöÇß½À´Ï´Ù. ---Lorem ipsum dolor sit amet,
-				consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-				labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-				exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-				esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-				cupidatat non proident, sunt in culpa qui officia deserunt mollit
-				anim id est laborum.
-			</p>
-
-
-
-
-		</article>
-
-
-	</section>
-	<footer class='sections'>
-		<p id='footerParagraph'>
-			lee.jaewon@nts-corp.com<br> https://github.com/wodnjs6512
-		</p>
-	</footer>
-</body>
+			
+		</footer>
+			
+	</body>
+	
 </html>
