--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -10,7 +10,7 @@
 
 <body>
 	<nav>
-		<ul id="navList">
+		<ul class="navList">
 			<li class="kategorie"><a href="index.html">홈</a></li>
 			<li class="kategorie"><a href="aboutme.html">자기소개</a></li>
 			<li class="kategorie"><a href="photo.html">내사진</a></li>
@@ -18,7 +18,7 @@
 		</ul>
 	</nav>
 
-	<section id="mainContent">
+	<section class="main_content">
 		<article class="content">
 			<p class="title">이런 것을 잘해요?</p>
 			<span class="substance">
@@ -44,7 +44,7 @@
 		</article>
 	</section>
 
-	<footer id="footer">
+	<footer class="footer">
 		<p>lee-seungsoo@nts-corp.com</p>
 	</footer>
 </body>
