--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<nav>
-		<ul id="navList">
+		<ul class="navList">
 			<li class="kategorie"><a href="index.html">홈</a></li>
 			<li class="kategorie"><a href="aboutme.html">자기소개</a></li>
 			<li class="kategorie"><a href="photo.html">내사진</a></li>
@@ -18,14 +18,14 @@
 		</ul>
 	</nav>
 
-	<section id="mainContent">
-		<h1 id="name">lee seungsoo</h1>
-		<span id="introduce">
+	<section class="main_content">
+		<h1 class="name">lee seungsoo</h1>
+		<span class="introduce">
 			nts 2019 intern<br>
 			함께 개발하고 성장하고싶어요
 		</span>
 		<div class="buttonSection">
-			<ul id="buttonList">
+			<ul class="buttonList">
 				<li class="btnKategorie"><a href="aboutme.html">자기소개</a></li>
 				<li class="btnKategorie"><a href="photo.html">내사진</a></li>
 			</ul>
@@ -35,7 +35,7 @@
 			alt="green factory">
 	</section>
 
-	<footer id="footer">
+	<footer class="footer">
 		<span>lee-seungsoo@nts-corp.com</span>
 	</footer>
 </body>
