--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -9,7 +9,7 @@
 
 <body>
 	<nav>
-		<ul id="navList">
+		<ul class="navList">
 			<li class="kategorie"><a href="index.html">홈</a></li>
 			<li class="kategorie"><a href="aboutme.html">자기소개</a></li>
 			<li class="kategorie"><a href="photo.html">내사진</a></li>
@@ -17,8 +17,8 @@
 		</ul>
 	</nav>
 
-	<section id="mainContent">
-		<article class="photoContent">
+	<section class="main_content">
+		<article class="photo_content">
 			<img class="photo"
 				src="https://scontent-icn1-1.xx.fbcdn.net/v/t1.0-9/48398331_368261953932022_2493571730459590656_o.jpg?_nc_cat=109&_nc_ht=scontent-icn1-1.xx&oh=8f592c9b0b71a8c2a7a6d3fb6502a118&oe=5CBEB478"
 				alt="recruitment notice">
@@ -28,7 +28,7 @@
 				</span>
 		</article>
 
-		<article class="photoContent">
+		<article class="photo_content">
 			<img class="photo"
 				src="https://simg.pstatic.net/onetile/get/197/0/0/12/3424/2887/bl_vc_bg/ol_vc_an"
 				alt="nts location">
@@ -39,7 +39,7 @@
 		</article>
 	</section>
 
-	<footer id="footer">
+	<footer class="footer">
 		<p>lee-seungsoo@nts-corp.com</p>
 	</footer>
 </body>
