--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -10,7 +10,7 @@
 
 <body>
 	<nav>
-		<ul class="navList">
+		<ul class="nav_list">
 			<li class="kategorie"><a href="index.html">홈</a></li>
 			<li class="kategorie"><a href="aboutme.html">자기소개</a></li>
 			<li class="kategorie"><a href="photo.html">내사진</a></li>
