Minor CSS convension changed

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -7,8 +7,7 @@
 		<!-- External Style Sheet and font 나눔고딕 -->
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800"
-			>
+			href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800">
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/aboutme.css">
 		
@@ -18,18 +17,18 @@
 	
 		<header class='sections' id='navbar'>
 		
-			<ul id="navMenu">
+			<ul id="nav_menu">
 			
-				<li class="button navButton">
+				<li class="button nav_button">
 					<a href="/aboutme/index.html">홈</a>
 				</li>
-				<li class="button navButton">
+				<li class="button nav_button">
 					<a href="/aboutme/aboutme.html">자기소개</a>
 				</li>
-				<li class="button navButton">
+				<li class="button nav_button">
 					<a href="/aboutme/photo.html">내사진</a>
 				</li>
-				<li class="button navButton">
+				<li class="button nav_button">
 					<a href="/aboutme/today">몇시에요</a>
 				</li>
 				
@@ -37,12 +36,13 @@
 			
 		</header>
 		
-		<section class='sections aboutMeSection'>
+		<section class='sections about_me_section'>
 		
-			<article class='aboutMeArticle'>
+			<article class='about_me_article'>
 			
 				<p>
-					<strong>이런 것을 잘해요?</strong><br> Lorem ipsum dolor sit amet,
+					<strong>이런 것을 잘해요?</strong><br> 
+					Lorem ipsum dolor sit amet,
 					consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
 					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
 					exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -54,7 +54,7 @@
 	
 			</article>
 			
-			<article class='aboutMeArticle'>
+			<article class='about_me_article'>
 			
 				<p>
 					<strong>나의 포트폴리오</strong><br>
@@ -66,7 +66,7 @@
 	
 			</article>
 			
-			<article class='aboutMeArticle'>
+			<article class='about_me_article'>
 			
 				<p>
 					<strong>나의 최근 프로젝트 설명</strong><br>
@@ -87,7 +87,7 @@
 		
 		<footer class='sections'>
 		
-			<p id='footerParagraph'>
+			<p id='footer_paragraph'>
 				lee.jaewon@nts-corp.com<br>
 				https://github.com/wodnjs6512
 			</p>
