--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,8 +7,7 @@
 		<!-- External Style Sheet and font 나눔고딕 -->
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800"
-			>
+			href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800">
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/index.css">
 	
@@ -18,18 +17,18 @@
 	
 		<header class='sections' id='navbar'>
 		
-			<ul id="navMenu">
+			<ul id="nav_menu">
 			
-				<li class="button navButton">
+				<li class="button nav_button">
 					<a href="/aboutme/index.html">홈</a>
 				</li>
-				<li class="button navButton">
+				<li class="button nav_button">
 					<a href="/aboutme/aboutme.html">자기소개</a>
 				</li>
-				<li class="button navButton">
+				<li class="button nav_button">
 					<a href="/aboutme/photo.html">내사진</a>
 				</li>
-				<li class="button navButton">
+				<li class="button nav_button">
 					<a href="/aboutme/today">몇시에요</a>
 				</li>
 				
@@ -39,18 +38,18 @@
 		
 		<section class='sections'>
 		
-			<p class="indexContentParagraph">
+			<p class="index_content_paragraph">
 				<strong>웹 프론트엔드 개발자~! 이재원</strong><br>
 				함께 개발하고 같이 성장하고 싶어요 <br> 
 				경기도 용인시 수지구 어딘가 살고 있어요
 			</p>
 	
-			<ul id="navMenu">
+			<ul id="nav_menu">
 			
-				<li class = "button contentButton">
+				<li class = "button content_button">
 					<a href="/aboutme/index.html">홈</a>
 				</li>
-				<li class = "button contentButton">
+				<li class = "button content_button">
 					<a href="/aboutme/aboutme.html">자기소개</a>
 				</li>
 				
@@ -62,7 +61,7 @@
 		
 		<footer class = 'sections'>
 		
-			<p id='footerParagraph'>
+			<p id='footer_paragraph'>
 				lee.jaewon@nts-corp.com<br>
 				https://github.com/wodnjs6512
 			</p>
