create css directory

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>PJT1</title>
 
-<link rel="stylesheet" href="aboutme.css">
-<link rel="stylesheet" href="layout.css">
+<link rel="stylesheet" href="css/aboutme.css">
+<link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body>
