--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>PJT1</title>
-<link rel="stylesheet" href="photo.css">
-<link rel="stylesheet" href="layout.css">
+<link rel="stylesheet" href="css/photo.css">
+<link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body>
