--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>PJT1</title>
 
-<link rel="stylesheet" href="index.css">
-<link rel="stylesheet" href="layout.css">
+<link rel="stylesheet" href="css/index.css">
+<link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body>
