--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="css/layout.css">
 </head>
 
-<body>
-	<nav>
+<body class="colored_bg">
+	<nav class="kategorie_section">
 		<ul class="nav_list">
 			<li class="kategorie"><a href="index.html">홈</a></li>
 			<li class="kategorie"><a href="aboutme.html">자기소개</a></li>
