minor css change with index page

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -46,10 +46,10 @@
 	
 			<ul id="nav_menu">
 			
-				<li class = "button content_button">
+				<li class = "button index_content_button">
 					<a href="/aboutme/index.html">홈</a>
 				</li>
-				<li class = "button content_button">
+				<li class = "button index_content_button">
 					<a href="/aboutme/aboutme.html">자기소개</a>
 				</li>
 				
