modify class name(main_content to content_area)

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -18,7 +18,7 @@
 		</ul>
 	</nav>
 
-	<section class="main_content">
+	<section class="content_area">
 		<article class="content">
 			<p class="title">이런 것을 잘해요?</p>
 			<span class="substance">
