--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,7 +18,7 @@
 		</ul>
 	</nav>
 
-	<section class="main_content">
+	<section class="content_area">
 		<h1 class="name">lee seungsoo</h1>
 		<span class="introduce">
 			nts 2019 intern<br>
