--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -17,7 +17,7 @@
 		</ul>
 	</nav>
 
-	<section class="main_content">
+	<section class="content_area">
 		<article class="photo_content">
 			<img class="photo"
 				src="https://scontent-icn1-1.xx.fbcdn.net/v/t1.0-9/48398331_368261953932022_2493571730459590656_o.jpg?_nc_cat=109&_nc_ht=scontent-icn1-1.xx&oh=8f592c9b0b71a8c2a7a6d3fb6502a118&oe=5CBEB478"
