--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Title</title>
+<title>자기소개</title>
 <link href="css/common_style.css" type="text/css" rel="stylesheet" />
 <link href="css/aboutme.css" type="text/css" rel="stylesheet" />
 </head>
