--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Title</title>
+<title>내사진</title>
 <link href="css/common_style.css" type="text/css" rel="stylesheet" />
 <link href="css/photo.css" type="text/css" rel="stylesheet" />
 </head>
