--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>둘리에요...</title>
-		<link rel="stylesheet" href="/aboutme/common.css">
-		<link rel="stylesheet" href="/aboutme/header.css">
-		<link rel="stylesheet" href="/aboutme/footer.css">
-		<link rel="stylesheet" href="/aboutme/photo.css">
+		<link rel="stylesheet" href="common.css">
+		<link rel="stylesheet" href="header.css">
+		<link rel="stylesheet" href="footer.css">
+		<link rel="stylesheet" href="photo.css">
 	</head>
 	
 	<body>
@@ -16,16 +16,16 @@
 			<nav>
 				<ul class="nav_list">
 					<li class="nav_item">
-						<a href="/aboutme/index.html">홈</a>
+						<a href="index.html">홈</a>
 					</li>
 					<li class="nav_item">
-						<a href="/aboutme/aboutme.html">자기소개</a>
+						<a href="aboutme.html">자기소개</a>
 					</li>
 					<li class="nav_item">
-						<a href="/aboutme/photo.html">내사진</a>
+						<a href="photo.html">내사진</a>
 					</li>
 					<li class="nav_item">
-						<a href="/aboutme/today">몇시에요</a>
+						<a href="today">몇시에요</a>
 					</li>
 				</ul>
 			</nav>
