--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
 	<body>
 		<header>
-			<nav>
+			<nav class="menu-nav">
 				<ul class="menu">
 					<a href="/index.html"><li class="menu-item square-box">홈</li></a>
 					<a href="/aboutme.html"><li class="menu-item square-box">자기소개</li></a>
