--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,15 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
 	<body>
 		<header>
-			<nav>
-				<nav>
+			<nav class="menu-nav">
 				<ul class="menu">
 					<a href="/index.html"><li class="menu-item square-box">홈</li></a>
 					<a href="/aboutme.html"><li class="menu-item square-box">자기소개</li></a>
 					<a href="/photo.html"><li class="menu-item square-box">내사진</li></a>
 					<a href="/aboutme/today"><li class="menu-item square-box">몇시에요</li></a>
 				</ul>
-			</nav>
 			</nav>
 		</header>
 		<section>
