html 빠진부분 추가

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -21,8 +21,8 @@
 			<span>함께 개발하고 같이 성장하고 싶어요</span>
 			<span>경기도 성남시 분당구 어딘가 살고 있어요!</span>
 			<ul>
-				<li class="caption square-box">자기소개</li>
-				<li class="caption square-box">내사진</li>
+				<a href="/aboutme.html"><li class="caption square-box">자기소개</li></a>
+				<a href="/photo.html"><li class="caption square-box">내사진</li></a>
 			</ul>
 			<img class="map" src="./img/map.PNG"/>
 		</section>
