자기소개 페이지 내용 보충

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -17,17 +17,17 @@
 		<div style="text-align:center;">
 			<h2>이런 것을 잘해요?</h2>
 			<p>
-				내용1
+				저는 매운것을 잘먹습니다. 하지만 매운것을 먹고나면 배가아프기 때문에 자주먹지는 않습니다.
 			</p>
 			
-			<h2>나의 포트폴리오</h2>
+			<h2>재밌게 본 영화</h2>
 			<p>
-				내용2
+				범죄도시 인터스텔라 나홀로집에 덩케르크 겨울왕국 아이언맨 토르 아쿠아맨 등등
 			</p>
 			
 			<h2>나의 최근 프로젝트 설명</h2>
 			<p>
-				내용3
+				나를 소개하는 홈페이지 만들기 [html/css/서블릿]
 			</p>
 		</div>
 		
