create img directory

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,7 +30,7 @@
 			</ul>
 		</div>
 		<img
-			src="http://cstatic.map.naver.net/image?version=1.1&center=127.1054328,37.3595963&level=11&w=886&h=415&baselayer=default&markers=type,default,127.1054328,37.3595963&caller=naver_se3_blog&scale=2&dataversion=197.0"
+			src="img/greenfac.png"
 			alt="green factory">
 	</section>
 
