--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -20,7 +20,7 @@
 	<section class="content_area">
 		<article class="photo_content">
 			<img class="photo"
-				src="https://scontent-icn1-1.xx.fbcdn.net/v/t1.0-9/48398331_368261953932022_2493571730459590656_o.jpg?_nc_cat=109&_nc_ht=scontent-icn1-1.xx&oh=8f592c9b0b71a8c2a7a6d3fb6502a118&oe=5CBEB478"
+				src="img/recruitment notice.jpg"
 				alt="recruitment notice">
 				<span class="explanation">
 					인턴 모집 공고문<br>
@@ -30,7 +30,7 @@
 
 		<article class="photo_content">
 			<img class="photo"
-				src="https://simg.pstatic.net/onetile/get/197/0/0/12/3424/2887/bl_vc_bg/ol_vc_an"
+				src="img/nts location.png"
 				alt="nts location">
 				<span class="explanation">
 					엔테크서비스 분당사업장의 위치입니다<br>
