flex->non-flex conversion index done

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -17,22 +17,24 @@
 	
 		<header class='sections' id='navbar'>
 		
-			<ul id="nav_menu">
-			
-				<li class="button nav_button">
-					<a href="/aboutme/index.html">홈</a>
-				</li>
-				<li class="button nav_button">
-					<a href="/aboutme/aboutme.html">자기소개</a>
-				</li>
-				<li class="button nav_button">
-					<a href="/aboutme/photo.html">내사진</a>
-				</li>
-				<li class="button nav_button">
-					<a href="/aboutme/today">몇시에요</a>
-				</li>
+			<nav>
+				<ul class="nav_menu">
 				
-			</ul>
+					<li class="button nav_button">
+						<a href="/aboutme/index.html">홈</a>
+					</li>
+					<li class="button nav_button">
+						<a href="/aboutme/aboutme.html">자기소개</a>
+					</li>
+					<li class="button nav_button">
+						<a href="/aboutme/photo.html">내사진</a>
+					</li>
+					<li class="button nav_button">
+						<a href="/aboutme/today">몇시에요</a>
+					</li>
+					
+				</ul>
+			</nav>
 			
 		</header>
 		
