--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -54,8 +54,9 @@
 					esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
 					cupidatat non proident, sunt in culpa qui officia deserunt mollit
 					anim id est laborum.
+					
 				</p>
-	
+				<hr/>
 			</article>
 			
 			<article class='about_me_article'>
@@ -65,9 +66,9 @@
 					<a href='http://www.my.com'>www.my.com</a><br> 
 					제 홈페이지 입니다. 이곳에서 많은 개발코드를 볼 수 있습니다. <br>
 					<a href='http://www.github.com/crong'>github.com/crong</a><br>
-					제가 주로 개발하는 소스코드 입니다. 이곳에서 많은 부분을 확인할 수 있습니다.
+					제가 주로 개발하는 소스코드 입니다. 이곳에서 많은 부분을 확인할 수 있습니다.<br>
 				</p>
-	
+				<hr/>
 			</article>
 			
 			<article class='about_me_article'>
@@ -84,7 +85,7 @@
 					cupidatat non proident, sunt in culpa qui officia deserunt mollit
 					anim id est laborum.
 				</p>
-	
+				<hr/>
 			</article>
 	
 		</section>
