css - min-witdh, max-width 지정, today서블릿의 css파일 추가

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -20,7 +20,7 @@
 			<a href="photo.html">
 				<li>내사진</li>
 			</a>
-			<a href="TodayServlet">
+			<a href="today">
 				<li>몇시에요</li>
 			</a>
 		</ul>
