--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,7 @@
 			<a href="photo.html">
 				<li>내사진</li>
 			</a>
-			<a href="TodayServlet">
+			<a href="today">
 				<li>몇시에요</li>
 			</a>
 		</ul>
@@ -36,9 +36,7 @@
 			<div>자기소개</div>
 		</a> <a href="photo.html">
 			<div>내사진</div>
-		</a>
-		<br>
-		<img src="image/map.jpg" alt="지도 이미지">
+		</a> <br> <img src="image/map.jpg" alt="지도 이미지">
 	</section>
 
 	<!--고정 하단 footer-->
