--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -20,7 +20,7 @@
 			<a href="photo.html">
 				<li>내사진</li>
 			</a>
-			<a href="TodayServlet">
+			<a href="today">
 				<li>몇시에요</li>
 			</a>
 		</ul>
