hotfix: publ -> aboutme_static 폴더 변경 , pom.xml servlet dependcy 추가

--- a/WebContent/aboutme/aboutme.html
+++ b/WebContent/aboutme/aboutme.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="/publ/src/css/style.css">
-<link rel="stylesheet" href="/publ/src/css/aboutme.css">
+<link rel="stylesheet" href="/aboutme_static/src/css/style.css">
+<link rel="stylesheet" href="/aboutme_static/src/css/aboutme.css">
 <title>자기소개 page</title>
 </head>
 <body>
