--- a/WebContent/aboutme/index.html
+++ b/WebContent/aboutme/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="/publ/src/css/index.css">
-<link rel="stylesheet" href="/publ/src/css/style.css">
+<link rel="stylesheet" href="/aboutme_static/src/css/index.css">
+<link rel="stylesheet" href="/aboutme_static/src/css/style.css">
 <title>자기소개 page</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
 			<li><a href="/aboutme/photo.html">내사진</a></li>
 		</ul>
 		<div id="my-location">
-			<img alt="my_home" src="/publ/src/img/my_home.png" width="900"
+			<img alt="my_home" src="/aboutme_static/src/img/my_home.png" width="900"
 				height="600">
 		</div>
 	</section>
