--- a/WebContent/aboutme/photo.html
+++ b/WebContent/aboutme/photo.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="/publ/src/css/style.css">
-<link rel="stylesheet" href="/publ/src/css/photo.css">
+<link rel="stylesheet" href="/aboutme_static/src/css/style.css">
+<link rel="stylesheet" href="/aboutme_static/src/css/photo.css">
 <title>자기소개 page</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
 	<!-- section -->
 	<section>
 		<div id="sally">
-			<img class="my-pic" alt="sally" src="/publ/src/img/line_sally.png">
+			<img class="my-pic" alt="sally" src="/aboutme_static/src/img/line_sally.png">
 			<span class="pic-info"> 
 				1994.02.25<br> 
 				샐리 (오리)<br>
@@ -30,7 +30,7 @@
 			</span>
 		</div>
 		<div id="brown">
-			<img class="my-pic" alt="brown" src="/publ/src/img/line_brown.jpg">
+			<img class="my-pic" alt="brown" src="/aboutme_static/src/img/line_brown.jpg">
 			<span class="pic-info"> 
 				2012.03<br>
 				브라운 (곰돌이)<br>
@@ -38,7 +38,7 @@
 			</span>
 		</div>
 		<div id="cony">
-			<img class="my-pic" alt="cony" src="/publ/src/img/line_cony.png">
+			<img class="my-pic" alt="cony" src="/aboutme_static/src/img/line_cony.png">
 			<span class="pic-info"> 
 				2019 (현재)<br>
 				코니 (토끼)<br>
