photo.html 일부 수정.

--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -35,7 +35,7 @@
 		<section>
 			<ul class="content_list">
 				<li class="content_item">
-					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcPPu2UQtG7DmF1FlWro93aeCuNEws-3sIrjB9pcYOz149qFI" alt="둘리 어렸을 때"/>
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcPPu2UQtG7DmF1FlWro93aeCuNEws-3sIrjB9pcYOz149qFI" alt="둘리 어렸을 때 사진"/>
 					<p>
 						1980.01.01
 						<br>
@@ -47,7 +47,7 @@
 					</p>
 				</li>
 				<li class="content_item">
-					<img src="https://s-sg.tc.smule.com/sf/s80/arr/2c/81/e30db1a8-29bd-4af9-b745-d7b82d904ce4_256.jpg" alt="둘리 어렸을 때"/>
+					<img src="https://s-sg.tc.smule.com/sf/s80/arr/2c/81/e30db1a8-29bd-4af9-b745-d7b82d904ce4_256.jpg" alt="둘리 인기 있을 때 사진"/>
 					<p>
 						1992.01.01
 						<br>
@@ -57,7 +57,7 @@
 					</p>
 				</li>
 				<li class="content_item">
-					<img src="http://images.jkn.co.kr/data/images/full/772014/image.jpg?w=600?w=600" alt="둘리 어렸을 때"/>
+					<img src="http://images.jkn.co.kr/data/images/full/772014/image.jpg?w=600?w=600" alt="뽀로로 사진"/>
 					<p>
 						2019.01.01
 						<br>
