--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,7 +11,7 @@
 			<button class="button_nav" onclick="location.href='index.html'">홈</button>
 			<button class="button_nav" onclick="location.href='aboutme.html'">자기소개</button>
 			<button class="button_nav" onclick="location.href='photo.html'">내사진</button>
-			<button class="button_nav" onclick="location.href='time.html'">몇시에요</button>
+			<button class="button_nav" onclick="location.href='today'">몇시에요</button>
 		</nav>
 		
 		<div style="text-align:center;">
