Comments and minor formatting

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -17,6 +17,7 @@
 	</head>
 	
 	<body>
+	
 		<!-- Common header -->
 		<header class='sections'>
 			
@@ -96,7 +97,7 @@
 	
 		</section>
 		
-		<!-- Common Footer -->
+		<!-- Common footer -->
 		
 		<footer class='sections'>
 		
