--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,6 +17,7 @@
 	</head>
 	
 	<body>
+	
 		<!-- Common header -->
 		<header class='sections'>
 			
@@ -71,7 +72,7 @@
 		
 		<!---------------------------------------->
 		
-		<!-- Common Footer -->
+		<!-- Common footer -->
 		
 		<footer class = 'sections'>
 		
