--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		
 		<title>PHOTO 페이지 입니다</title>
 		
 		<!-- External Style Sheet and font 나눔고딕 -->
@@ -18,6 +19,7 @@
 	</head>
 	
 	<body>
+	
 		<!-- Common header -->
 		<header class='sections'>
 			
@@ -110,7 +112,7 @@
 		
 		<!---------------------------------------->
 		
-		<!-- Common Footer -->
+		<!-- Common footer -->
 		
 		<footer class='sections'>
 		
