--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -11,10 +11,10 @@
 <body>
 	<header>
 		<ul>
-			<li><a href="./index.html"><div>홈</div></a></li>
-			<li><a href="./aboutme.html"><div>자기소개</div></a></li>
-			<li><a href="./photo.html"><div>내사진</div></a></li>
-			<li><a href="./time"><div>몇시에요</div></a></ul>
+			<li><a href="./index.html">홈</a></li>
+			<li><a href="./aboutme.html">자기소개</a></li>
+			<li><a href="./photo.html">내사진</a></li>
+			<li><a href="./today">몇시에요</a></ul>
 		</ul>
 	</header>
 	<div class="content">
