add javadoc comments & change css positioning

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,28 +10,38 @@
 <body class="colored_bg">
 	<nav class="kategorie_section">
 		<ul class="nav_list">
-			<li class="kategorie"><a href="index.html">홈</a></li>
-			<li class="kategorie"><a href="aboutme.html">자기소개</a></li>
-			<li class="kategorie"><a href="photo.html">내사진</a></li>
-			<li class="kategorie"><a href="today">몇시에요</a></li>
+			<li class="kategorie_list">
+				<a href="index.html" class="kategorie">홈</a>
+			</li>
+			<li class="kategorie_list">
+				<a href="aboutme.html" class="kategorie">자기소개</a>
+			</li>
+			<li class="kategorie_list">
+				<a href="photo.html" class="kategorie">내사진</a>
+			</li>
+			<li class="kategorie_list">
+				<a href="today" class="kategorie">몇시에요</a>
+			</li>
 		</ul>
 	</nav>
 
 	<section class="content_area">
 		<h1 class="name">lee seungsoo</h1>
-		<span class="introduce">
+		<p class="introduce">
 			nts 2019 intern<br>
 			함께 개발하고 성장하고싶어요
-		</span>
-		<div class="button_section">
-			<ul class="button_list">
-				<li class="btn_kategorie"><a href="aboutme.html">자기소개</a></li>
-				<li class="btn_kategorie"><a href="photo.html">내사진</a></li>
+		</p>
+		<div class="link_section">
+			<ul class="link_list">
+				<li class="link_kategorie">
+					<a href="aboutme.html" class="link">자기소개</a>
+				</li>
+				<li class="link_kategorie">
+					<a href="photo.html"  class="link">내사진</a>
+				</li>
 			</ul>
 		</div>
-		<img
-			src="img/greenfac.png"
-			alt="green factory">
+		<img class="main_image" src="img/greenfac.png" alt="green factory">
 	</section>
 
 	<footer class="footer">
