--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -10,33 +10,41 @@
 <body class="colored_bg">
 	<nav class="kategorie_section">
 		<ul class="nav_list">
-			<li class="kategorie"><a href="index.html">홈</a></li>
-			<li class="kategorie"><a href="aboutme.html">자기소개</a></li>
-			<li class="kategorie"><a href="photo.html">내사진</a></li>
-			<li class="kategorie"><a href="today">몇시에요</a></li>
+			<li class="kategorie_list">
+				<a href="index.html" class="kategorie">홈</a>
+			</li>
+			<li class="kategorie_list">
+				<a href="aboutme.html" class="kategorie">자기소개</a>
+			</li>
+			<li class="kategorie_list">
+				<a href="photo.html" class="kategorie">내사진</a>
+			</li>
+			<li class="kategorie_list">
+				<a href="today" class="kategorie">몇시에요</a>
+			</li>
 		</ul>
 	</nav>
 
 	<section class="content_area">
-		<article class="photo_content">
-			<img class="photo"
-				src="img/recruitment notice.jpg"
-				alt="recruitment notice">
-				<span class="explanation">
-					인턴 모집 공고문<br>
-					공고문을 보고 지원하게 되었습니다.
-				</span>
-		</article>
-
-		<article class="photo_content">
-			<img class="photo"
-				src="img/nts location.png"
-				alt="nts location">
-				<span class="explanation">
-					엔테크서비스 분당사업장의 위치입니다<br>
-					현재 4층에서 근무하고 있습니다.
-				</span>
-		</article>
+		<div class="each_content">
+			<article class="photo_content">
+				<img class="photo" src="img/recruitment notice.jpg" alt="recruitment notice">
+					<span class="explanation">
+						인턴 모집 공고문<br>
+						공고문을 보고 지원하게 되었습니다.
+					</span>
+			</article>
+		</div>
+		
+		<div class="each_content">
+			<article class="photo_content">
+				<img class="photo" src="img/nts location.png" alt="nts location">
+					<span class="explanation">
+						엔테크서비스 분당사업장의 위치입니다<br>
+						현재 4층에서 근무하고 있습니다.
+					</span>
+			</article>
+		</div>
 	</section>
 
 	<footer class="footer">
