--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -1,38 +1,34 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
-		<title>자기소개 페이지</title>
-		<link rel="stylesheet" href="./css/style.css">
-	</head>
-	<body>
-		<nav>
-			<button class="button_nav" onclick="location.href='index.html'">홈</button>
-			<button class="button_nav" onclick="location.href='aboutme.html'">자기소개</button>
-			<button class="button_nav" onclick="location.href='photo.html'">내사진</button>
-			<button class="button_nav" onclick="location.href='today'">몇시에요</button>
-		</nav>
-		
-		<div style="text-align:center;">
-			<h2>이런 것을 잘해요?</h2>
-			<p>
-				저는 매운것을 잘먹습니다. 하지만 매운것을 먹고나면 배가아프기 때문에 자주먹지는 않습니다.
-			</p>
-			
-			<h2>재밌게 본 영화</h2>
-			<p>
-				범죄도시 인터스텔라 나홀로집에 덩케르크 겨울왕국 아이언맨 토르 아쿠아맨 등등
-			</p>
-			
-			<h2>나의 최근 프로젝트 설명</h2>
-			<p>
-				나를 소개하는 홈페이지 만들기 [html/css/서블릿]
-			</p>
-		</div>
-		
-		<footer>
-			<span>Copyright @배진우</span>
-		</footer>
-	</body>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>자기소개 페이지</title>
+<link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+	<nav>
+		<button class="button_nav" onclick="location.href='index.html'">홈</button>
+		<button class="button_nav" onclick="location.href='aboutme.html'">자기소개</button>
+		<button class="button_nav" onclick="location.href='photo.html'">내사진</button>
+		<button class="button_nav" onclick="location.href='today'">몇시에요</button>
+	</nav>
+
+	<div>
+		<h2>이런 것을 잘해요?</h2>
+		<p>
+			저는 매운것을 잘먹습니다.<br /> 하지만 매운것을 먹고나면 배가아프기 때문에 자주먹지는 않습니다.
+		</p>
+
+		<h2>재밌게 본 영화</h2>
+		<p>범죄도시 인터스텔라 나홀로집에 덩케르크 겨울왕국 아이언맨 토르 아쿠아맨 등등</p>
+
+		<h2>나의 최근 프로젝트 설명</h2>
+		<p>나를 소개하는 홈페이지 만들기 [html/css/서블릿]</p>
+	</div>
+
+	<footer>
+		<span>Copyright @배진우</span>
+	</footer>
+</body>
 </html>
