--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,34 +1,33 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
-		<title>메인화면 페이지</title>
-		<link rel="stylesheet" href="./css/style.css">
-	</head>
-	<body>
-		<nav>
-			<button class="button_nav" onclick="location.href='index.html'">홈</button>
-			<button class="button_nav" onclick="location.href='aboutme.html'">자기소개</button>
-			<button class="button_nav" onclick="location.href='photo.html'">내사진</button>
-			<button class="button_nav" onclick="location.href='today'">몇시에요</button>
-		</nav>
-		
-		<div style="text-align:center;">
-			<h1>웹 프론트엔드 개발자~! 배진우</h1>
-			<p>
-				함께 개발하고 같이성장하고 싶어요<br/>
-				경기도 성남시 분당구 어딘가 살고 있어요!<br/>
-			</p>
-			<p>
-				<button class="button_square" onclick="location.href='aboutme.html'">자기소개</button>
-				<button class="button_square" onclick="location.href='photo.html'">내사진</button>
-			</p>
-			<img src="./img/home_map.jpg"/>
-		</div>
-		
-		<footer>
-			<span>Copyright @배진우</span>
-		</footer>
-	</body>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>메인화면 페이지</title>
+<link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+	<nav>
+		<button class="button_nav" onclick="location.href='index.html'">홈</button>
+		<button class="button_nav" onclick="location.href='aboutme.html'">자기소개</button>
+		<button class="button_nav" onclick="location.href='photo.html'">내사진</button>
+		<button class="button_nav" onclick="location.href='today'">몇시에요</button>
+	</nav>
+
+	<div style="text-align: center;">
+		<h1>웹 프론트엔드 개발자~! 배진우</h1>
+		<p>
+			함께 개발하고 같이성장하고 싶어요<br /> 경기도 성남시 분당구 어딘가 살고 있어요!<br />
+		</p>
+		<p>
+			<button class="button_square" onclick="location.href='aboutme.html'">자기소개</button>
+			<button class="button_square" onclick="location.href='photo.html'">내사진</button>
+		</p>
+		<img src="./img/집사진.jpg" />
+	</div>
+
+	<footer>
+		<span>Copyright @배진우</span>
+	</footer>
+</body>
 </html>
