index.html, index.css 일부 작성

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Insert title here</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="css/base.css" />
+<title>메인화면</title>
 </head>
 <body>
+	<header>
+		<section id="nav-menu">
+			<div class="container">
+				<ul>
+					<li id="menu">홈</li>
+					<li id="menu">자기소개</li>
+					<li id="menu">내사진</li>
+					<li id="menu">몇시예요</li>
+				</ul>
+			</div>
+	</header>
 
+	<section id="nav-content">
+		<div class="container">
+			<h1>웹프론트엔드 개발자~! 두익</h1>
+			<br> 함께 개발하고 같이성장하고 싶어요<br> 경기도 성남시 서현동 어딘가 살고 있어요!
+
+			<ul>
+				<li id="content">자기소개</li>
+				<li id="content">내사진</li>
+			</ul>
+
+			<img src="img/map.PNG" alt="경기도 성남시 서현동 지도">
+		</div>
+	</section>
+	<footer>
+		<section id="nav-profile">
+			<div class="container">
+				<ul>
+					duik.park@nts-corp.com
+					<br> https://gitlab.com/duik.park
+				</ul>
+			</div>
+		</section>
+	</footer>
 </body>
 </html>
