adjust the width of layout

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -29,30 +29,30 @@
 		<div class="each_content">
 			<article class="content">
 				<p class="title">이런 것을 잘해요?</p>
-				<span class="substance">
+				<p class="substance">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nisi enim, hendrerit dignissim accumsan vel, condimentum sollicitudin augue. Morbi tellus urna, vulputate nec risus quis, interdum tincidunt odio. Nullam odio erat, vulputate nec nunc ac, molestie varius ante. Pellentesque vestibulum pharetra lacus at dapibus. Nam eros diam, gravida at risus nec, interdum volutpat augue. Integer ultricies urna sit amet mauris tristique, quis sollicitudin eros congue. Vivamus elit justo, rhoncus euismod luctus id, mattis fermentum lectus. Suspendisse eleifend dui et dolor consequat, ac accumsan enim varius. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla quis massa lacinia, consectetur felis eget, rutrum ipsum. Ut quis neque lectus. Quisque commodo ullamcorper tincidunt. Morbi pellentesque, enim non fringilla porttitor, metus elit venenatis nunc, et tempus massa metus sit amet ante.
-				</span>
+				</p>
 			</article>
 		</div>
 
 		<div class="each_content">
 			<article class="content">
 				<p class="title">개인페이지</p>
-				<span class="substance">
+				<p class="substance">
 					<a href="http://wiki.navercorp.com/pages/viewpage.action?pageId=412587101">회의록</a><br>
 					회의록을 작성합니다 <br>
 					<a href="https://gitlab.com/n_tech_service/2019_1st_intern">프로젝트저장소</a><br>
 					인턴기간동안 진행될 프로젝트 리파지토리입니다.
-				</span>
+				</p>
 			</article>
 		</div>
 
 		<div class="each_content">
 			<article class="content">
 				<p class="title">나의 최근 프로젝트 설명</p>
-				<span class="substance">
+				<p class="substance">
 					Nunc faucibus dictum ex vel porttitor. Suspendisse tempor interdum ante. Ut id porttitor sapien. In hac habitasse platea dictumst. Integer malesuada nisl risus, hendrerit efficitur arcu commodo bibendum. Morbi non interdum ipsum, sit amet faucibus turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur porta sit amet enim non convallis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris lacinia nibh ut lectus posuere, vitae lacinia metus gravida. Vestibulum vitae orci non lorem ultricies rutrum. Vivamus auctor enim lacus, vel lacinia est convallis vitae. Maecenas vitae enim nisl.
-				</span>
+				</p>
 			</article>
 		</div>
 	</section>
