--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -12,7 +12,7 @@
 	
 	<body>
 		<!-- header -->
-		<header>
+		<header class="header">
 			<nav>
 				<ul class="nav_list">
 					<li class="nav_item">
@@ -32,7 +32,7 @@
 		</header>
 		
 		<!-- section -->
-		<section>
+		<section class="section">
 			<ul class="content_list">
 				<li class="content_item">
 					<h1 class="subject">이런 것을 잘해요?</h1>
@@ -61,7 +61,7 @@
 		</section>
 		
 		<!-- footer -->
-		<footer>
+		<footer class="footer">
 			<span class="footer_text_container">
 				<p>
 					dooli@codesquad.kr
