--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,7 +12,7 @@
 	
 	<body>
 		<!-- header -->
-		<header>
+		<header class="header">
 			<nav>
 				<ul class="nav_list">
 					<li class="nav_item">
@@ -32,7 +32,7 @@
 		</header>
 		
 		<!-- section -->
-		<section>
+		<section class="section">
 			<h1 class="greeting">웹프론트엔드 개발자~! dooli</h1>
 			<p class="description">
 				함께 개발하고 성장하고 싶어요.
@@ -53,7 +53,7 @@
 		</section>
 		
 		<!-- footer -->
-		<footer>
+		<footer class="footer">
 			<span class="footer_text_container">
 				<p>
 					dooli@codesquad.kr
