--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
-<link rel="stylesheet" href="layout.css">
-<link rel="stylesheet" href="photo.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/photo.css">
 
 <!doctype html>
 <html>
@@ -21,7 +21,7 @@
 	
 		<article>
 			<div class="photo">
-				<img src="./map.png">
+				<img src="./img/map.png">
 			</div>
 			
 			<div class="photo_info">
@@ -35,7 +35,7 @@
 		<article>
 			<div class="photo">
 			
-				<img src="./map.png">
+				<img src="./img/map.png">
 			</div>
 			<div class="photo_info">
 				
