--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -1,6 +1,6 @@
 ﻿<meta charset="utf-8">
-<link rel="stylesheet" href="layout.css">
-<link rel="stylesheet" href="aboutme.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/aboutme.css">
 
 <!doctype html>
 <html>
