--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
-<link rel="stylesheet" href="layout.css">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/index.css">
 
 <!doctype html>
 <html>
@@ -28,7 +28,7 @@
 			<li><a href="./photo.html">내사진</a></li>
 		</ul>
 		
-		<img src="./map.png" alt="map">
+		<img src="./img/map.png" alt="map">
 		
 	</div>
 	<footer>
