css분리 및 수정, html 태그 변경

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,8 @@
 		<title>메인 화면</title>
 	</head>
 	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
-	<body>
+	<link rel="stylesheet" type="text/css" href="./css/index.css"/>
+	<body id="background">
 		<header>
 			<nav class="menu-nav">
 				<ul class="menu">
@@ -17,19 +18,19 @@
 			</nav>
 		</header>
 		<section>
-			<span class="title">웹프론트엔드 개발자~!</span>
-			<span>함께 개발하고 같이 성장하고 싶어요</span>
-			<span>경기도 성남시 분당구 어딘가 살고 있어요!</span>
-			<ul>
-				<a href="/aboutme.html"><li class="caption square-box">자기소개</li></a>
-				<a href="/photo.html"><li class="caption square-box">내사진</li></a>
+			<div class="title">웹프론트엔드 개발자~!</div>
+			<div>함께 개발하고 같이 성장하고 싶어요</div>
+			<div>경기도 성남시 분당구 어딘가 살고 있어요!</div>
+			<ul class="content-list">
+				<a href="/aboutme.html"><li class="link-content square-box">자기소개</li></a>
+				<a href="/photo.html"><li class="link-content square-box">내사진</li></a>
 			</ul>
 			<img class="map" src="./img/map.PNG"/>
 		</section>
 		<footer>
-			<div id="web">
-				<span>life4lord93@nts-corp.com</span>
-				<span>https://gitlab.com/n_tech_service/2019_1st_intern</span>
+			<div id="web-address">
+				<div>life4lord93@nts-corp.com</div>
+				<div>https://gitlab.com/n_tech_service/2019_1st_intern</div>
 			</div>
 		</footer>
 	</body>
