--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -5,7 +5,7 @@
 		<title>자기소개</title>
 	</head>
 	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
-	<body>
+	<body id="background">
 		<header>
 			<nav class="menu-nav">
 				<ul class="menu">
@@ -19,28 +19,28 @@
 		<section>
 			<ul class="content-list">
 				<li class="content">
-					<span class="title">이런것을 잘해요</span>
-					<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</span>
+					<div class="title">이런것을 잘해요</div>
+					<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</div>
 				</li>
 				<li class="content">
-					<span class="title">내가 쓰는 웹사이트</span>
-					<span><a href="http://www.naver.com">http://www.naver.com</a></span>
-					<span>네이버에요</span>
-					<span><a href="http://www.github.com">http://www.github.com</a></span>
-					<span>깃헙이에요</span>
+					<div class="title">내가 쓰는 웹사이트</div>
+					<div><a href="http://www.naver.com">http://www.naver.com</a></div>
+					<div>네이버에요</div>
+					<div><a href="http://www.github.com">http://www.github.com</a></div>
+					<div>깃헙이에요</div>
 				</li>
 				<li class="content">
-					<span class="title">나의 최근 프로젝트 설명</span>
-					<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</span>
+					<div class="title">나의 최근 프로젝트 설명</div>
+					<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</div>
 				</li>
 				
 				
 			</ul>
 		</section>
 		<footer>
-			<div id="web">
-				<span>life4lord93@nts-corp.com</span>
-				<span>https://gitlab.com/n_tech_service/2019_1st_intern</span>
+			<div id="web-address">
+				<div>life4lord93@nts-corp.com</div>
+				<div>https://gitlab.com/n_tech_service/2019_1st_intern</div>
 			</div>
 		</footer>
 	</body>
