--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -5,7 +5,8 @@
 		<title>자기소개</title>
 	</head>
 	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
-	<body>
+	<link rel="stylesheet" type="text/css" href="./css/photo.css"/>
+	<body id="background">
 		<header>
 			<nav class="menu-nav">
 				<ul class="menu">
@@ -21,25 +22,25 @@
 				<li class="content">
 					<img class="photo" src="./img/yesterday.jpg" align="left"/>
 					<div class="photo-caption">
-						<span>2019년 1월 14일</span>
-						<span>활기차게</span>
-						<span>시작</span>
+						<div>2019년 1월 14일</div>
+						<div>활기차게</div>
+						<div>시작</div>
 					</div>
 				</li>
 				<li class="content">
 					<img class="photo" src="./img/today.JPG" align="left"/>
 					<div class="photo-caption">
-						<span>2019년 1월 15일</span>
-						<span>도대체</span>
-						<span>뭐가 문제냐</span>
+						<div>2019년 1월 15일</div>
+						<div>도대체</div>
+						<div>뭐가 문제냐</div>
 					</div>
 				</li>
 			</ul>
 		</section>
 		<footer>
-			<div id="web">
-				<span>life4lord93@nts-corp.com</span>
-				<span>https://gitlab.com/n_tech_service/2019_1st_intern</span>
+			<div id="web-address">
+				<div>life4lord93@nts-corp.com</div>
+				<div>https://gitlab.com/n_tech_service/2019_1st_intern</div>
 			</div>
 		</footer>
 	</body>
