hotfix: css 변경 및 html 태그 변경 , TodayServlet 불필요한 주석 제거

--- a/WebContent/aboutme/index.html
+++ b/WebContent/aboutme/index.html
@@ -12,25 +12,25 @@
 	<!-- header -->
 	<header>
 		<ul id="header-ul">
-			<li><a href="/aboutme/index.html">홈</a></li>
-			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
-			<li><a href="/aboutme/photo.html">내사진</a></li>
-			<li><a href="/aboutme/today">몇시에요</a></li>
+			<a href="/aboutme/index.html"><li>홈</li></a>
+			<a href="/aboutme/aboutme.html"><li>자기소개</li></a>
+			<a href="/aboutme/photo.html"><li>내사진</li></a>
+			<a href="/aboutme/today"><li>몇시에요</li></a>
 		</ul>
 	</header>
 
 	<!-- section -->
 	<section>
-		<h1>웹 서버 사이드(java) 개발자 ~! 전연빈</h1>
+		<span id="title">웹 서버 사이드(java) 개발자 ~! 전연빈</span>
 		<div id="simple-my-info">
-			<h5>
+			<p>
 				함께 개발하고 같이 성장하고 싶어요<br> 
 				경기도 하남시 덕풍1동 어딘가 살고 있어요!
-			</h5>
+			</p>
 		</div>
 		<ul id="section-ul">
-			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
-			<li><a href="/aboutme/photo.html">내사진</a></li>
+			<a href="/aboutme/aboutme.html"><li>자기소개</li></a>
+			<a href="/aboutme/photo.html"><li>내사진</li></a>
 		</ul>
 		<div id="my-location">
 			<img alt="my_home" src="/aboutme_static/src/img/my_home.png" width="900"
@@ -40,8 +40,8 @@
 
 	<!-- footer -->
 	<footer>
-		<div id="email">jyb5858@nts-corp.com</div>
-		<div id="blog-url">https://github.com/jeonyeonbin</div>
+		<div id="email" class="footer-info">jyb5858@nts-corp.com</div>
+		<div id="blog-url" class="footer-info">https://github.com/jeonyeonbin</div>
 	</footer>
 </body>
 </html>
