--- a/WebContent/aboutme/photo.html
+++ b/WebContent/aboutme/photo.html
@@ -12,16 +12,16 @@
 	<!-- header -->
 	<header>
 		<ul id="header-ul">
-			<li><a href="/aboutme/index.html">홈</a></li>
-			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
-			<li><a href="/aboutme/photo.html">내사진</a></li>
-			<li><a href="/aboutme/today">몇시에요</a></li>
+			<a href="/aboutme/index.html"><li>홈</li></a>
+			<a href="/aboutme/aboutme.html"><li>자기소개</li></a>
+			<a href="/aboutme/photo.html"><li>내사진</li></a>
+			<a href="/aboutme/today"><li>몇시에요</li></a>
 		</ul>
 	</header>
 
 	<!-- section -->
 	<section>
-		<div id="sally">
+		<div id="sally" class="photozone">
 			<img class="my-pic" alt="sally" src="/aboutme_static/src/img/line_sally.png">
 			<span class="pic-info"> 
 				1994.02.25<br> 
@@ -29,7 +29,7 @@
 				태어 났을 때, 샐리처럼 조그만한 시절이 있었습니다.<br>
 			</span>
 		</div>
-		<div id="brown">
+		<div id="brown" class="photozone">
 			<img class="my-pic" alt="brown" src="/aboutme_static/src/img/line_brown.jpg">
 			<span class="pic-info"> 
 				2012.03<br>
@@ -37,7 +37,7 @@
 				곰돌이처럼 세상에 무서움을 모르고 덤빌때가 있었죠.<br>
 			</span>
 		</div>
-		<div id="cony">
+		<div id="cony" class="photozone">
 			<img class="my-pic" alt="cony" src="/aboutme_static/src/img/line_cony.png">
 			<span class="pic-info"> 
 				2019 (현재)<br>
@@ -49,8 +49,8 @@
 
 	<!-- footer -->
 	<footer>
-		<div id="email">jyb5858@nts-corp.com</div>
-		<div id="blog-url">https://github.com/jeonyeonbin</div>
+		<div id="email" class="footer-info">jyb5858@nts-corp.com</div>
+		<div id="blog-url" class="footer-info">https://github.com/jeonyeonbin</div>
 	</footer>
 </body>
 </html>
