index.html, aboutme.html 작성완료

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="css/base.css" />
 <title>메인화면</title>
 </head>
-<body id="index">
+<body>
 	<header>
 		<section id="nav-menu">
 			<nav class="container">
@@ -19,17 +19,14 @@
 		</section>
 	</header>
 
-	<section id="nav-index">
+	<section id="nav-aboutme">
 		<nav class="container">
-			<h1>웹프론트엔드 개발자~! 두익</h1>
-			함께 개발하고 같이성장하고 싶어요<br> 경기도 성남시 서현동 어딘가 살고 있어요!
-
-			<ul id="content">
-				<li id="content">자기소개</li>
-				<li id="content">내사진</li>
-			</ul>
-
-			<img src="img/map.PNG" alt="경기도 성남시 서현동 지도">
+			<p><h1>이런 것을 잘해요?</h1>
+			내용</p>
+			<p class="paragraph"><h1>나의 포트폴리오</h1>
+			내용</p>
+			<p class="paragraph"><h1>나의 최근 프로젝트 설명</h1>
+			내용</p>
 		</nav>
 	</section>
 	<footer>
