이미지 수정

--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -21,7 +21,7 @@
 	
 		<article>
 			<div class="photo">
-				<img src="./img/map.png">
+				<img src="./img/img1.jpg">
 			</div>
 			
 			<div class="photo_info">
@@ -35,7 +35,7 @@
 		<article>
 			<div class="photo">
 			
-				<img src="./img/map.png">
+				<img src="./img/img2.jpg">
 			</div>
 			<div class="photo_info">
 				
