#7 css 통합 & 네이밍 변경

--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
 	<meta charset="UTF-8">
 	<title>PJT1</title>
-	<link rel="stylesheet" href="css/photo.css">
+	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body class="colored_bg">
-	<nav class="kategorie_section">
-		<ul class="nav_list">
-			<li class="kategorie_list">
-				<a href="index.html" class="kategorie">홈</a>
+	<nav class="category_section">
+		<ul>
+			<li class="category">
+				<a href="index.html">홈</a>
 			</li>
-			<li class="kategorie_list">
-				<a href="aboutme.html" class="kategorie">자기소개</a>
+			<li class="category">
+				<a href="aboutme.html">자기소개</a>
 			</li>
-			<li class="kategorie_list">
-				<a href="photo.html" class="kategorie">내사진</a>
+			<li class="category">
+				<a href="photo.html">내사진</a>
 			</li>
-			<li class="kategorie_list">
-				<a href="today" class="kategorie">몇시에요</a>
+			<li class="category">
+				<a href="today">몇시에요</a>
 			</li>
 		</ul>
 	</nav>
 
-	<section class="content_area">
-		<div class="each_content">
-			<article class="photo_content">
-				<img class="photo" src="img/recruitment notice.jpg" alt="recruitment notice">
-					<span class="explanation">
-						인턴 모집 공고문<br>
-						공고문을 보고 지원하게 되었습니다.
-					</span>
+	<section class="main_section">
+		<div class="photo_content">
+			<article>
+				<img src="img/recruitment notice.jpg" alt="recruitment notice">
+				<p>
+					인턴 모집 공고문<br>
+					공고문을 보고 지원하게 되었습니다.
+				</p>
 			</article>
 		</div>
 		
-		<div class="each_content">
-			<article class="photo_content">
-				<img class="photo" src="img/nts location.png" alt="nts location">
-					<span class="explanation">
-						엔테크서비스 분당사업장의 위치입니다<br>
-						현재 4층에서 근무하고 있습니다.
-					</span>
+		<div class="photo_content">
+			<article>
+				<img src="img/nts location.png" alt="nts location">
+				<p>
+					엔테크서비스 분당사업장의 위치입니다<br>
+					현재 4층에서 근무하고 있습니다.
+				</p>
 			</article>
 		</div>
 	</section>
 
-	<footer class="footer">
+	<footer class="footer_section">
 		<p>lee-seungsoo@nts-corp.com</p>
 	</footer>
 </body>
