--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
 	<meta charset="UTF-8">
 	<title>PJT1</title>
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body class="colored_bg">
-	<nav class="kategorie_section">
-		<ul class="nav_list">
-			<li class="kategorie_list">
-				<a href="index.html" class="kategorie">홈</a>
+	<nav class="category_section">
+		<ul>
+			<li class="category">
+				<a href="index.html">홈</a>
 			</li>
-			<li class="kategorie_list">
-				<a href="aboutme.html" class="kategorie">자기소개</a>
+			<li class="category">
+				<a href="aboutme.html">자기소개</a>
 			</li>
-			<li class="kategorie_list">
-				<a href="photo.html" class="kategorie">내사진</a>
+			<li class="category">
+				<a href="photo.html">내사진</a>
 			</li>
-			<li class="kategorie_list">
-				<a href="today" class="kategorie">몇시에요</a>
+			<li class="category">
+				<a href="today">몇시에요</a>
 			</li>
 		</ul>
 	</nav>
 
-	<section class="content_area">
-		<h1 class="name">lee seungsoo</h1>
-		<p class="introduce">
+	<section class="main_section">
+		<h1>lee seungsoo</h1>
+		<p>
 			nts 2019 intern<br>
 			함께 개발하고 성장하고싶어요
 		</p>
-		<div class="link_section">
-			<ul class="link_list">
-				<li class="link_kategorie">
-					<a href="aboutme.html" class="link">자기소개</a>
+		<div class="link_category">
+			<ul>
+				<li>
+					<a href="aboutme.html">자기소개</a>
 				</li>
-				<li class="link_kategorie">
-					<a href="photo.html"  class="link">내사진</a>
+				<li>
+					<a href="photo.html">내사진</a>
 				</li>
 			</ul>
 		</div>
-		<img class="main_image" src="img/greenfac.png" alt="green factory">
+		<img src="img/greenfac.png" alt="green factory">
 	</section>
 
-	<footer class="footer">
+	<footer class="footer_section">
 		<span>lee-seungsoo@nts-corp.com</span>
 	</footer>
 </body>
