--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -3,17 +3,22 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="css/base.css" />
-<title>메인화면</title>
+<title>자기소개</title>
 </head>
 <body>
 	<header>
 		<section id="nav-menu">
 			<nav class="container">
 				<ul id="menu">
-					<li id="menu" class="button"><a href="index.html" style="text-decoration:none">홈</a></li>
-					<li id="menu" class="button"><a href="aboutme.html" style="text-decoration:none">자기소개</a></li>
-					<li id="menu" class="button"><a href="photo.html" style="text-decoration:none">내사진</a></li>
-					<li id="menu" class="button"><a href="http://localhost:8080/aboutme/today" style="text-decoration:none">몇시예요</a></li>
+					<li id="menu" class="button"><a href="index.html"
+						style="text-decoration: none">홈</a></li>
+					<li id="menu" class="button"><a href="aboutme.html"
+						style="text-decoration: none">자기소개</a></li>
+					<li id="menu" class="button"><a href="photo.html"
+						style="text-decoration: none">내사진</a></li>
+					<li id="menu" class="button"><a
+						href="http://localhost:8080/aboutme/today"
+						style="text-decoration: none">몇시예요</a></li>
 				</ul>
 			</nav>
 		</section>
@@ -21,12 +26,18 @@
 
 	<section id="nav-aboutme">
 		<nav class="container">
-			<p><h1>이런 것을 잘해요?</h1>
-			내용</p>
-			<p class="paragraph"><h1>나의 포트폴리오</h1>
-			내용</p>
-			<p class="paragraph"><h1>나의 최근 프로젝트 설명</h1>
-			내용</p>
+			<p>
+			<h1>이런 것을 잘해요?</h1>
+			내용
+			</p>
+			<p class="paragraph">
+			<h1>나의 포트폴리오</h1>
+			내용
+			</p>
+			<p class="paragraph">
+			<h1>나의 최근 프로젝트 설명</h1>
+			내용
+			</p>
 		</nav>
 	</section>
 	<footer>
