--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,10 +10,15 @@
 		<section id="nav-menu">
 			<nav class="container">
 				<ul id="menu">
-					<li id="menu" class="button"><a href="index.html" style="text-decoration:none">홈</a></li>
-					<li id="menu" class="button"><a href="aboutme.html" style="text-decoration:none">자기소개</a></li>
-					<li id="menu" class="button"><a href="photo.html" style="text-decoration:none">내사진</a></li>
-					<li id="menu" class="button"><a href="http://localhost:8080/aboutme/today" style="text-decoration:none">몇시예요</a></li>
+					<li id="menu" class="button"><a href="index.html"
+						style="text-decoration: none">홈</a></li>
+					<li id="menu" class="button"><a href="aboutme.html"
+						style="text-decoration: none">자기소개</a></li>
+					<li id="menu" class="button"><a href="photo.html"
+						style="text-decoration: none">내사진</a></li>
+					<li id="menu" class="button"><a
+						href="http://localhost:8080/aboutme/today"
+						style="text-decoration: none">몇시예요</a></li>
 				</ul>
 			</nav>
 		</section>
@@ -25,8 +30,10 @@
 			함께 개발하고 같이 성장하고 싶어요<br> 경기도 성남시 서현동 어딘가 살고 있어요!
 
 			<ul id="content">
-				<li id="content" class="button"><a href="aboutme.html" style="text-decoration:none">자기소개</a></li>
-				<li id="content" class="button"><a href="photo.html" style="text-decoration:none">내사진</a></li>
+				<li id="content" class="button"><a href="aboutme.html"
+					style="text-decoration: none">자기소개</a></li>
+				<li id="content" class="button"><a href="photo.html"
+					style="text-decoration: none">내사진</a></li>
 			</ul>
 
 			<img src="img/map.PNG" alt="경기도 성남시 서현동 지도">
